--- a/Yekan.css
+++ b/Yekan.css
@@ -6,7 +6,7 @@
 			url('Yekan.woff2') format('woff2'), /* Modern Browsers */
 			url('Yekan.woff') format('woff'), /* Modern Browsers */
 			url('Yekan.otf') format('opentype'), /* Open Type Font */	
-			url('Yekan.ttf') format('truetype'), /* Safari, Android, iOS */
+			url('Yekan.ttf') format('truetype'); /* Safari, Android, iOS */
 	font-weight: normal;
 	font-style: normal;
 	text-rendering: optimizeLegibility;
